Added interactivity in terminal. Responsive to phones

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,16 +16,15 @@
     }
 }
 
-
-
 .blink {
     animation: blink 1s step-end infinite;
 }
 
 @keyframes blink {
-    50% {
-        opacity: 0;
-    }
+  50% { opacity: 0; }
+}
+.blink {
+  animation: blink 1s step-end infinite;
 }
 
 body {
